Sun Oct  8 23:11:17 2000  Christopher Faylor <cgf@cygnus.com>

	* ps.cc (main): Change order of reporting slightly so that windows pids
	are more obvious.
	* strace.cc (add_child): Just add child's pid directly.
	(remove_child): No need to close the child process pid since
	ContinueDebugEvent does that automatically.
	(proc_child): Ditto for child thread.

Fri Sep 29 13:12:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* cygcheck.cc (keyeprint): New function.
	(check_keys): New function. Perform checking keycodes.
	(main): Add option `-k' for invoking check_keys.
	Change option processing to use long options and getopt_long.
	* cygkeycheck.cc: Removed. Functionality moved to `cygcheck.cc'.
	* Makefile.in: Remove cygkeycheck from the dependencies.

Wed Sep 27 16:24:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* cygkeycheck.cc: New file. Utility to retrieve keycodes.
	* Makefile.in: Add cygkeycheck to the dependencies.

2000-09-15  Joerg Schaible <joerg.schaible@gmx.de>

	* cygpath.cc: Add new options: -s and -i.
	* utils.sgml: Document the new options.

Tue Sep 12 22:45:28 2000  Christopher Faylor <cgf@cygnus.com>

	* kill.cc (main): Change behavior of -f so that it will force the
	killing of a cygwin process after waiting 2 tenths of a second for it
	to terminate.
	(forcekill): Add an extra argument determining whether to wait for the
	process to exit.

Sun Sep 10 12:50:02 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Refine dumper.exe message.

Mon Aug 28 21:55:56 2000  Christopher Faylor <cgf@cygnus.com>

	* kill.c (main): Avoid skipping next argument when a signal number is
	specified.
	* Makefile.in: Always clean dumper.exe.

Fri Aug 25 12:41:53 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Only build dumper.exe when all of its library and
	include dependencies are available.

Fri Aug 25 11:44:29 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Make failure to build dumper.exe a non-error.
